--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </ul>
             </div>
             <div class="serach-bar flex">
-                <input type="text" class="news-input" placeholder="e.g science">
-                <div class="search-button">Search</div>
+                <input type="text" id="search-text" placeholder="e.g science">
+                <div id="search-button">Search</div>
             </div>
         </div>
     </nav>
